# azure-sdk-for-cpp

./: CMakeLists.txt
sdk/core/azure-core/: CMakeLists.txt
sdk/core/azure-core/inc/: azure.hpp  credentials.hpp
sdk/core/azure-core/inc/_internal/: cfg.hpp  prefix.hpp  suffix.hpp
sdk/core/azure-core/test/: main.cpp
sdk/template/azure-template/: CHANGELOG.md
sdk/template/azure-template/inc/azure/template/: version.hpp
